fix: fixed call preview name overflow outside of queue preview container [WTEL-2376]

--- a/src/css/agent-workspace/queue-section/queue-task-preview.scss
+++ b/src/css/agent-workspace/queue-section/queue-task-preview.scss
@@ -36,7 +36,7 @@
 
   &__name {
     @extend %typo-subtitle-1;
-    flex: 1 0 auto;
+    flex-grow: 1;
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
